--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
+bcrypt = "*"
+PyJWT = "*"
 
 [requires]
 python_full_version = "3.8.13"
