--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
+; Google Maps API key
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAenUpadtVGw1G3-ztFhujCUEMWXPB-a2w
+
+; Backend API URL
+REACT_APP_API_URL=http://localhost:5555
