--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "vercel-build": "react-scripts build",
-    "serve": "serve -s build -l 3000"
+    "serve": "serve -s build -l $PORT"
   },
   "eslintConfig": {
     "extends": [
